--- a/public/stylesheets/index/index.scss
+++ b/public/stylesheets/index/index.scss
@@ -299,13 +299,13 @@ section.features{
             }
 
             div.feature-card-img{
+                background: #BAB9BB;
+                padding: 50px;
+                margin-bottom: 16px;
+                border-radius: 50%;
                 img{
-                    width: 241px;
-                    height: 241px;
-
-                    padding: 30px;
-                    background: #ccc;
-                    border-radius: 100%;
+                    width: 90px;
+                    height: 90px;
                 }
             }
 
