--- a/public/stylesheets/index/resp_1150.scss
+++ b/public/stylesheets/index/resp_1150.scss
@@ -57,9 +57,13 @@
 
             article{
                 div.feature-card-img{
+                    background: #BAB9BB;
+                    padding: 50px;
+                    margin-bottom: 16px;
+                    border-radius: 50%;
                     img{
-                        width: 248px;
-                        height: 248px;
+                        width: 90px;
+                        height: 90px;
                     }
                 }
     
