--- a/public/stylesheets/index/resp_516.css
+++ b/public/stylesheets/index/resp_516.css
@@ -28,7 +28,7 @@
     font-size: 28px;
   }
   section.features div.feature-cards {
-    margin: -64px 0 0 0;
+    margin: -16px 0 0 0;
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
     -ms-grid-rows: (1fr)[4];
@@ -36,11 +36,14 @@
     padding: 32px 0;
   }
   section.features div.feature-cards article div.feature-card-img {
-    margin-top: 16px;
+    background: #BAB9BB;
+    padding: 50px;
+    margin-bottom: 16px;
+    border-radius: 50%;
   }
   section.features div.feature-cards article div.feature-card-img img {
-    width: 285px;
-    height: 285px;
+    width: 90px;
+    height: 90px;
   }
   section.features div.feature-cards article div.text-container {
     margin-top: 8px;
