--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,20 +1,55 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
-    <title>Zabbix Reports Index</title>
-    <link rel="shortcut icon" href="/images/icons/favicon.ico" />
-
     <meta charset="UTF-8" />
+
+    <!-- ------------ SEO ------------ -->
+
+    <!-- Global SEO -->
+    <title>Zabbix Reports - Generate The Best Data Reports</title>
+    <meta name="description" content="Zabbix reporting is a tool that helps you generate data reports. With zabbix, you can generate data reports from the best data analysis platforms available on the market.">
+    <meta name="author" content="Service Monit">
+    <meta name="robots" content="index, follow">
+    <meta name="subject" content="Presentation page of the Zabbix Reports tool">
+    <meta name="abstract" content="Zabbix Reports presentation page">
+    <meta name="coverage" content="Worldwide">
+    <meta name="format-detection" content="telephone=no">
+    <!-- <meta name="url" content="COLOCAR O DOMÍNIO OU LINK DA PÁGINA AQUI"> -->
+
+    <!-- Open Graph Facebook -->
+    <meta property="og:title" content="Zabbix Reports - Generate The Best Data Reports">
+    <meta property="og:description" content="Zabbix reporting is a tool that helps you generate data reports. With zabbix, you can generate data reports from the best data analysis platforms available on the market">
+    <meta property="og:site_name" content="Zabbix Reports">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="/images/seo/zabbix-social-image.jpg">
+    <!-- <meta property="og:url" content="COLOCAR LINK DESSA PÁGINA AQUI"> -->
+    
+    <!-- Open Graph Twitter -->
+    <meta name="twitter:title" content="Zabbix Reports - Generate The Best Data Reports">
+    <meta name="twitter:description" content="Zabbix reporting is a tool that helps you generate data reports. With zabbix, you can generate data reports from the best data analysis platforms available on the market">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:image" content="/images/seo/zabbix-social-image.jpg">
+    <!-- <meta name="twitter:url" content="COLOCAR O DOMÍNIO OU LINK DA PÁGINA AQUI"> -->
+
+    <!-- Apple iOS -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="Zabbix Reports - Generate The Best Data Reports">
+
+    <!-- Android -->
+    <meta name="mobile-web-app-capable" content="yes">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta name="theme-color" content="#727176" />
-
-    <link rel="stylesheet" type="text/css" href="/stylesheets/index/index.css">
-    <link rel="stylesheet" type="text/css" href="/stylesheets/index/resp_1150.css">
-    <link rel="stylesheet" type="text/css" href="/stylesheets/index/resp_945.css">
-    <link rel="stylesheet" type="text/css" href="/stylesheets/index/resp_750.css">
-    <link rel="stylesheet" type="text/css" href="/stylesheets/index/resp_516.css">
+    
+    <!-- <link rel="canonical" href="COLOCAR O DOMÍNIO OU LINK DA PÁGINA AQUI"> -->
+    <link href="/images/icons/favicon.png" rel="icon" />
+    <link href="/stylesheets/index/index.css" rel="stylesheet" type="text/css">
+    <link href="/stylesheets/index/resp_1150.css" rel="stylesheet" type="text/css">
+    <link href="/stylesheets/index/resp_945.css" rel="stylesheet" type="text/css">
+    <link href="/stylesheets/index/resp_750.css" rel="stylesheet" type="text/css">
+    <link href="/stylesheets/index/resp_516.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -27,10 +62,10 @@
                 </div>
                 <nav role="navigation" id="desktop-menu">
                     <ul>
-                        <li><a class="nav-link" href="#about">About</a></li>
-                        <li><a class="nav-link" href="#prices">Prices</a></li>
-                        <li><a class="nav-link" href="#video">Videos</a></li>
-                        <li><a class="nav-link" href="#contact">Contact</a></li>
+                        <li><a href="#about" class="nav-link">About</a></li>
+                        <li><a href="#prices" class="nav-link">Prices</a></li>
+                        <li><a href="#video" class="nav-link">Videos</a></li>
+                        <li><a href="#contact" class="nav-link">Contact</a></li>
                         <li><a href="#">Start Now</a></li>
                     </ul>
                 </nav>
@@ -42,10 +77,10 @@
                 </div>
                 <nav role="navigation" class="mobile-menu hide-menu">
                     <ul>
-                        <li><a class="nav-link" href="#about">About</a></li>
-                        <li><a class="nav-link" href="#prices">Prices</a></li>
-                        <li><a class="nav-link" href="#video">Videos</a></li>
-                        <li><a class="nav-link" href="#">Contact</a></li>
+                        <li><a href="#about" class="nav-link">About</a></li>
+                        <li><a href="#prices" class="nav-link">Prices</a></li>
+                        <li><a href="#video" class="nav-link">Videos</a></li>
+                        <li><a href="#contact" class="nav-link">Contact</a></li>
                         <li><a href="#">Start Now</a></li>
                     </ul>
                 </nav>
@@ -72,7 +107,7 @@
             <div class="feature-cards">
                 <article>
                     <div class="feature-card-img">
-                        <img src="/images/illustrations/home-illustration.svg" alt="minimalistic work illustration" />
+                        <img src="/images/illustrations/edit.svg" alt="edit a zabbix" />
                     </div>
                     <div class="text-container">
                         <h3>Models</h3>
@@ -81,7 +116,7 @@
                 </article>
                 <article>
                     <div class="feature-card-img">
-                        <img src="/images/illustrations/home-illustration.svg" alt="minimalistic work illustration" />
+                        <img src="/images/illustrations/save.svg" alt="save a zabbix" />
                     </div>
                     <div class="text-container">
                         <h3>Save</h3>
@@ -90,7 +125,7 @@
                 </article>
                 <article>
                     <div class="feature-card-img">
-                        <img src="/images/illustrations/home-illustration.svg" alt="minimalistic work illustration" />
+                        <img src="/images/illustrations/export.svg" alt="export a zabbix" />
                     </div>
                     <div class="text-container">
                         <h3>Export</h3>
@@ -99,7 +134,7 @@
                 </article>
                 <article>
                     <div class="feature-card-img">
-                        <img src="/images/illustrations/home-illustration.svg" alt="minimalistic work illustration" />
+                        <img src="/images/illustrations/vhost.svg" alt="have your own vhost" />
                     </div>
                     <div class="text-container">
                         <h3>vHost</h3>
@@ -196,7 +231,7 @@
             </div>
             <div class="content">
                 <div class="content-left">
-                    <img id="rocket" src="/images/illustrations/rocket.svg" alt="rocket">
+                    <img id="rocket" src="/images/illustrations/rocket.svg" alt="rocket illustration">
                 </div>
                 <div class="content-right">
                     <h3>Sign in with these credentials</h3>
