--- a/public/stylesheets/index/resp_516.scss
+++ b/public/stylesheets/index/resp_516.scss
@@ -45,7 +45,7 @@
         }
 
         div.feature-cards{
-            margin: -64px 0 0 0;
+            margin: -16px 0 0 0;
             
             grid-template-columns: 1fr;
             grid-template-rows: repeat(4, 1fr);
@@ -55,12 +55,13 @@
         div.feature-cards{
             article{
                 div.feature-card-img{
-                    
-                    margin-top: 16px;
-
+                    background: #BAB9BB;
+                    padding: 50px;
+                    margin-bottom: 16px;
+                    border-radius: 50%;
                     img{
-                        width: 285px;
-                        height: 285px;
+                        width: 90px;
+                        height: 90px;
                     }
                 }
     
