--- a/public/stylesheets/index/resp_945.css
+++ b/public/stylesheets/index/resp_945.css
@@ -50,9 +50,15 @@
     margin-left: 0 !important;
     opacity: 1 !important;
   }
+  section.features div.feature-cards article div.feature-card-img {
+    background: #BAB9BB;
+    padding: 50px;
+    margin-bottom: 16px;
+    border-radius: 50%;
+  }
   section.features div.feature-cards article div.feature-card-img img {
-    width: 240px;
-    height: 240px;
+    width: 90px;
+    height: 90px;
   }
   section.features div.feature-cards article div.text-container h3 {
     font-size: 19px;
