--- a/public/stylesheets/index/resp_945.scss
+++ b/public/stylesheets/index/resp_945.scss
@@ -84,9 +84,13 @@
                 opacity: 1 !important;
 
                 div.feature-card-img{
+                    background: #BAB9BB;
+                    padding: 50px;
+                    margin-bottom: 16px;
+                    border-radius: 50%;
                     img{
-                        width: 240px;
-                        height: 240px;
+                        width: 90px;
+                        height: 90px;
                     }
                 }
     
