--- a/src/views/index.html
+++ b/src/views/index.html
@@ -8,7 +8,8 @@
 
     <!-- Global SEO -->
     <title>Zabbix Reports - Generate The Best Data Reports</title>
-    <meta name="description" content="Zabbix reporting is a tool that helps you generate data reports. With zabbix, you can generate data reports from the best data analysis platforms available on the market.">
+    <meta name="description"
+        content="Zabbix reporting is a tool that helps you generate data reports. With zabbix, you can generate data reports from the best data analysis platforms available on the market.">
     <meta name="author" content="Service Monit">
     <meta name="robots" content="index, follow">
     <meta name="subject" content="Presentation page of the Zabbix Reports tool">
@@ -19,15 +20,17 @@
 
     <!-- Open Graph Facebook -->
     <meta property="og:title" content="Zabbix Reports - Generate The Best Data Reports">
-    <meta property="og:description" content="Zabbix reporting is a tool that helps you generate data reports. With zabbix, you can generate data reports from the best data analysis platforms available on the market">
+    <meta property="og:description"
+        content="Zabbix reporting is a tool that helps you generate data reports. With zabbix, you can generate data reports from the best data analysis platforms available on the market">
     <meta property="og:site_name" content="Zabbix Reports">
     <meta property="og:type" content="website">
     <meta property="og:image" content="/images/seo/zabbix-social-image.jpg">
     <!-- <meta property="og:url" content="COLOCAR LINK DESSA PÁGINA AQUI"> -->
-    
+
     <!-- Open Graph Twitter -->
     <meta name="twitter:title" content="Zabbix Reports - Generate The Best Data Reports">
-    <meta name="twitter:description" content="Zabbix reporting is a tool that helps you generate data reports. With zabbix, you can generate data reports from the best data analysis platforms available on the market">
+    <meta name="twitter:description"
+        content="Zabbix reporting is a tool that helps you generate data reports. With zabbix, you can generate data reports from the best data analysis platforms available on the market">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:image" content="/images/seo/zabbix-social-image.jpg">
     <!-- <meta name="twitter:url" content="COLOCAR O DOMÍNIO OU LINK DA PÁGINA AQUI"> -->
@@ -42,7 +45,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    
+
     <!-- <link rel="canonical" href="COLOCAR O DOMÍNIO OU LINK DA PÁGINA AQUI"> -->
     <link href="/images/icons/favicon.png" rel="icon" />
     <link href="/stylesheets/index/index.css" rel="stylesheet" type="text/css">
@@ -219,9 +222,10 @@
                     <h2>Learn how to generate your first report</h2>
                 </div>
                 <div class="video-container">
-                    <!-- <iframe src="https://www.youtube.com/embed/QqlwTtSqp9A" frameborder="0"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-                    </iframe> -->
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/8HlPCyQRiek" frameborder="0"
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                    <a target="_blank" href="https://www.youtube.com/channel/UCVaLF_9xtCOeVnCJZJ1MTEA">Watch more videos</a>
                 </div>
             </article>
         </section>
