--- a/public/stylesheets/index/index.scss
+++ b/public/stylesheets/index/index.scss
@@ -537,18 +537,35 @@ section.videos{
     }
 
     article.demo-video{
+        padding-bottom: 32px;
         div.video-container{
             width: 100%;
-            padding-bottom: 32px;
             text-align: center;
 
             iframe{
                 z-index: 10;
                 width: 100%;
                 height: 500px;
+                padding-bottom: 16px;
 
                 //transition-property
                 opacity: 0;
+            }
+
+            a{
+                color: white;
+                text-align: center;
+                width: 100%;
+                font-size: 17px;
+                font-weight: 500;
+                transition: $transition-duration;
+                font-style: italic;
+                border-bottom: 1px solid #fff;
+
+                &:hover{
+                    color: #dedede;
+                    border-color: #dedede;
+                }
             }
         }
     }
