--- a/src/views/index.html
+++ b/src/views/index.html
@@ -159,13 +159,14 @@
                                 <h4>Alone</h4>
                             </header>
                             <div class="content">
-                                <span>Lorem</span>
-                                <span>Lorem</span>
-                                <span>Lorem</span>
-                                <span>Lorem</span>
-                                <span>Lorem</span>
-                                <span>Lorem</span>
-                                <span>Lorem</span>
+                                <h3 class="content-title">Only one template can be created, you can insert a brand for
+                                    customization.
+                                </h3>
+                                <h4 class="content-p">For each additional report you need, you will get a 5% discount
+                                    off the amount previously paid</h4>
+                            </div>
+                            <div class="btn-container">
+                                <button class="card-btn">$ 50</button>
                             </div>
                         </div>
                         <div class="price-card" id="customize">
@@ -173,13 +174,17 @@
                                 <h4>Customize</h4>
                             </header>
                             <div class="content">
-                                <span>Lorem</span>
-                                <span>Lorem</span>
-                                <span>Lorem</span>
-                                <span>Lorem</span>
-                                <span>Lorem</span>
-                                <span>Lorem</span>
-                                <span>Lorem</span>
+                                <h3 class="content-title">Create your own plan with your business needs</h3>
+                                <div class="list">
+                                    <h4>You can:</h4>
+                                    <span> - Save unlimited reports;</span>
+                                    <span> - Create unlimited templates;</span>
+                                    <span> - Save unlimited reports;</span>
+                                    <span> - vHost custom.</span>
+                                </div>
+                            </div>
+                            <div class="btn-container">
+                                <button class="card-btn">Make your plan now!</button>
                             </div>
                         </div>
                         <div class="price-card" id="reseller">
@@ -187,13 +192,16 @@
                                 <h4>Reseller</h4>
                             </header>
                             <div class="content">
-                                <span>Lorem</span>
-                                <span>Lorem</span>
-                                <span>Lorem</span>
-                                <span>Lorem</span>
-                                <span>Lorem</span>
-                                <span>Lorem</span>
-                                <span>Lorem</span>
+                                <div class="list-center">
+                                    <span>Start with 10 Zabbix</span>
+                                    <span>Unlimited Reporting Templates;</span>
+                                    <span>Save Unlimited Report;</span>
+                                    <span>Can create 2 users for each zabbix;</span>
+                                    <span>vHost custom.</span>
+                                </div>
+                            </div>
+                            <div class="btn-container">
+                                <button class="card-btn">Become a reseller!</button>
                             </div>
                         </div>
                     </div>
@@ -225,7 +233,8 @@
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/8HlPCyQRiek" frameborder="0"
                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
-                    <a target="_blank" href="https://www.youtube.com/channel/UCVaLF_9xtCOeVnCJZJ1MTEA">Watch more videos</a>
+                    <a target="_blank" href="https://www.youtube.com/channel/UCVaLF_9xtCOeVnCJZJ1MTEA">Watch more
+                        videos</a>
                 </div>
             </article>
         </section>
