--- a/public/stylesheets/index/index.scss
+++ b/public/stylesheets/index/index.scss
@@ -18,11 +18,6 @@ $transition-duration: 280ms;
         color: white;
         background: $primary-blue;
     }
-
-    .selected-card{
-        background: #fff;
-        transform: scale(1.05);
-    }
     
     a{
         text-decoration: none;
@@ -257,9 +252,7 @@ section.features{
             text-align: center;
             font-weight: 700;
             font-size: 32px;
-
-            //animation-property
-            // transform: translateY(-1350%);
+            color: $primary-grey;
             margin-left: -300px;
             opacity: 0;
         }
@@ -373,37 +366,33 @@ section.prices{
                 display: flex;
                 align-items: center;
                 justify-content: center;
+                
+                .selected-card{
+                    background: #fff !important;
+                    color: black !important;
+                    transform: scale(1.05) !important;
+                    border-color: black !important;
+                    z-index: 900 !important;
+                }
 
                 div.price-card{
                     width: 30%;
-                    border: 4px solid #fff;
+                    margin: 0 2px;
+                    background: #fff;
+                    border: 2px solid transparent;
                     height: 100%;
                     display: flex;
                     flex-direction: column;
                     align-items: center;
-                    justify-content: space-between;
-                    padding-bottom: 250px;
+                    justify-content: flex-start;
+                    min-height: 450px;
                     position: relative;
                     transition: $transition-duration;
+                    cursor: pointer;
 
                     &:hover{
-                        cursor: pointer;
-                        background: #fff;
                         transform: scale(1.05);
-                    }
-
-                    &::before{
-                        content: '';
-                        background: #fff;
-                        border-left: 4px solid #fff;
-                        border-right: 4px solid #fff;
-                        position: absolute;
-                        width: 100%;
-                        height: 10%;
-                        top: -10%;
-                        left: -4px;
-                        opacity: 0;
-                        transition: $transition-duration;
+                        z-index: 1000;
                     }
 
                     &:nth-child(1){
@@ -413,8 +402,6 @@ section.prices{
                     &:nth-child(2){
                         margin-bottom: -20px;
                         opacity: 0;
-                        border-right: none;
-                        border-left: none;
                     }
                     &:nth-child(3){
                         margin-bottom: -30px;
@@ -423,18 +410,94 @@ section.prices{
 
                     header{
                         padding: 8px 0;
+                        margin-top: 16px;
                         h4{
                             text-align: center !important;
+                            font-size: 18px;
+                            text-transform: uppercase;
+                            color: black
+                        }
+                    }
+                    
+                    div.btn-container{
+                        flex: 1;
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: flex-end;
+                        margin: 0 16px;
+                        padding-bottom: 16px;
+                        
+                        button{
+                            background: transparent;
+                            border-color: black;
+                            color: 2px solid black;
+                            padding: 8px 32px;
+                            font-size: 16px;
+                            font-weight: 600;
+                            transition: $transition-duration;
+
+                            &:hover{
+                                cursor: pointer;
+                                background: black;
+                                color: white;
+                            }
                         }
                     }
 
                     div.content{
-                        pointer-events: none;
+                        padding: 8px 16px;
                         margin-top: 8px;
+                        pointer-events: none;
                         display: flex;
                         flex-direction: column;
                         align-items: center;
-                        justify-content: space-between;
+                        justify-content: flex-start;
+                        flex: 1;
+
+                        .list{
+                            display: flex;
+                            flex-direction: column;
+                            margin-top: 16px;
+
+                            span{
+                                font-size: 15px !important;
+                                margin: 2px 0;
+                                margin-left: -8px;
+                            }
+                        }
+
+                        .list-center{
+                            display: flex;
+                            flex-direction: column;
+                            align-items: center;
+                            margin-top: 16px;
+
+                            span{
+                                font-size: 17px !important;
+                                font-weight: 500;
+                                margin: 4px 0;
+                                margin-left: -8px;
+                                text-align: center;
+                            }
+                        }
+
+                        h3.content-title{
+                            color: black;
+                            font-size: 18px;
+                            font-weight: 600;
+                            margin-bottom: 8px;
+                            text-align: center;
+                            transition: $transition-duration;
+                        }
+
+                        .content-p{
+                            text-align: center;
+                            font-size: 16px;
+                            font-weight: 400;
+                            color: $secondary-grey;
+                            color: black;
+                            transition: $transition-duration;
+                        }
                     }
                 }
             }
